5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1828_1644.log
== TEST (2019-06-12 14:10:23) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] < 5):
		R = R + 1	

v = zeros(R, dtype=int)
ve = 0
for i in range(size(a)):
	if (a[i] < 5):
		v[i] = a[i]
		ve = ve + 1
print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:11:15) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] < 5):
		R = R + 1	

v = zeros(R, dtype=int)
ve = 0
for i in range(size(a)):
	if (a[i] < 5):
		v[i] = a[i]
		ve = ve + 1
print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:11:57) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] < 5):
		R = R + 1	

v = zeros(R, dtype=int)
ve = 0

for i in range(size(a)):
	if (a[i] < 5):
		v[ve] = a[i]
		ve = ve + 1
print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:13:09) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] < 5):
		R = R + 1	

v = zeros(R, dtype=int)
ve = 0

for i in range(size(a)):
	if (a[i] < 5):
		v[ve] = a[i]
		ve = ve + 1
print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:14:59) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] < 5):
		R = R + 1	

v = zeros(R, dtype=int)
ve = 0

for i in range(size(a)):
	if (a[i] >= 5):
		v = v
	if (a[i] < 5):
		v[ve] = a[i]
		ve = ve + 1
print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:16:41) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] < 5):
		R = R + 1	

v = zeros(R, dtype=int)
ve = 0
vs = 0
for i in range(size(a)):
	if (a[i] >= 5):
		v = v
		ve = ve + 1
	if (a[i] < 5):
		v[vs] = a[i]
		vs = vs + 1
print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:17:26) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] < 5):
		R = R + 1	

v = zeros(R, dtype=int)
ve = 0
vs = 0
for i in range(size(a)):
	if (a[i] >= 5):
		ve = ve + 1
	if (a[i] < 5):
		v[vs] = a[ve]
		vs = vs + 1
print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:17:53) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] < 5):
		R = R + 1	

v = zeros(R, dtype=int)
ve = 0
vs = 0
for i in range(size(a)):
	if (a[i] >= 5):
		ve = ve + 1
	if (a[i] < 5):
		v[vs] = a[ve]
		vs = vs + 1
		ve = ve + 1
print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:18:04) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] < 5):
		R = R + 1	

v = zeros(R, dtype=int)
ve = 0
vs = 0
for i in range(size(a)):
	if (a[i] >= 5):
		ve = ve + 1
	if (a[i] < 5):
		v[vs] = a[ve]
		vs = vs + 1
		ve = ve + 1
print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:20:10) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] < 5):
		R = R + 1	

v = zeros(R, dtype=int)
ve = 0
vs = 0
for i in range(size(a)):
	if (a[i] >= 5):
	if (a[i] < 5):
		v[vs] = a[i]
		vs = vs + 1
print(R)
print(v)
-- ERROR:
File "XXXX", line 14
    if (a[i] < 5):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:20:19) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] < 5):
		R = R + 1	

v = zeros(R, dtype=int)
ve = 0
vs = 0
for i in range(size(a)):
	if (a[i] < 5):
		v[vs] = a[i]
		vs = vs + 1
print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:21:13) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] < 5):
		R = R + 1	

v = zeros(R, dtype=int)
ve = 0
vs = 0
for i in range(size(a)):
	if (a[i] < 5):
		v[vs] = a[ve]
		vs = vs + 1
		ve = ve + 1
print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:21:57) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] < 5):
		R = R + 1	

v = zeros(R, dtype=int)
ve = 0
vs = 0
for i in a:
	if (a[i] < 5):
		v[vs] = a[ve]
		vs = vs + 1
		ve = ve + 1
print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:22:15) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] < 5):
		R = R + 1	

v = zeros(R, dtype=int)
ve = 0
vs = 0
for i in range(size(a)):
	if (a[i] < 5):
		v[vs] = a[ve]
		vs = vs + 1
		ve = ve + 1
print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:44:06) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] >= 5):
		R = R
	elif (a[i] < 5):
		R = R + 1	
v = zeros(R, dtype=int)
ve = 0
vs = 0
for i in range(size(a)):
	if (a[i] < 5):
		v[vs] = i
		vs = vs + 1

print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:44:21) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] >= 5):
		R = R
	elif (a[i] < 5):
		R = R + 1	
v = zeros(R, dtype=int)
ve = 0
vs = 0
for i in range(size(a)):
	if (a[i] < 5):
		v[vs] = i
		vs = vs + 1

print(R)
print(v)
-- EXECUTION TIME:
1.00116
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[ 0  2  8 10]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[1 2 3 5 6 8]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:44:51) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] >= 5):
		R = R
	elif (a[i] < 5):
		R = R + 1	
v = zeros(R, dtype=int)
vs = 0
for i in range(size(a)):
	if (a[i] < 5):
		v[vs] = i
		vs = vs + 1

print(R)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:44:59) 
-- CODE:
from numpy import *
a = array(eval(input("Notas finais: ")))

R = 0
for i in range(size(a)):
	if (a[i] >= 5):
		R = R
	elif (a[i] < 5):
		R = R + 1	
v = zeros(R, dtype=int)
vs = 0
for i in range(size(a)):
	if (a[i] < 5):
		v[vs] = i
		vs = vs + 1

print(R)
print(v)
-- EXECUTION TIME:
1.20785
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[ 0  2  8 10]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[1 2 3 5 6 8]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
